--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon SMMA</title>
+
 </head>
 
 <body>
@@ -24,7 +24,7 @@
             </ul>
         </div>
     </header>
-    <div class="hero"></div>
+    <div class="hero-image"></div>
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
