--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </header>
 
-    <section id="hero-section" class="hero-image"></section>
+    <section id="hero" class="hero-image"></section>
 
     <main class="content">
         <section class="search-engine-optimization">
